Fix inexplicable gap at bottom of home page

--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,6 @@ header {
   background-color: white;
   width: 100%;
   margin-bottom: -18px;
-  /* border: 1px red solid; */
 }
 
 #masthead-title {
@@ -104,6 +103,7 @@ header {
 
 #main-content {
   margin-top: 1em;
+  margin-bottom: -8px; /* hack */
   min-height: 350px;
   background-color: rgb(240,240,240);
 }
